Install socket.io

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "socket.io": "^4.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
