--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Amir Pourhadi <AmirPourhadi@outlook.com>",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon index.js"
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "express": "^4.17.2",
